# flappy-bird

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: release.yml
Dependencies/Network ML Library Release v1.5/lib/x64-Debug/: networkml.lib
Dependencies/Network ML Library Release v1.5/lib/x64-Release/: networkml.lib
Flappy_Bird/: Flappy_Bird.vcxproj  hmac_sha256.h  main.cpp  net.cpp  net.h  types.h  ui.cpp  ui.h
src/: Info.plist.in  app.rc.in  assets.cpp  assets.h  constants.h  flappy.icns  font.h  game.cpp  game.h  game_lifecycle.cpp  gameplay_helpers.cpp  gameplay_helpers.h  hmac_sha256.cpp  hmac_sha256.h  main.cpp  net.cpp  net.h  pak_archive.cpp  pak_archive.h  particles.cpp  particles.h  progression.h  render_game.cpp  render_game.h  render_menus.cpp  render_menus.h  run_artifacts.cpp  run_artifacts.h  save.cpp  save.h  scene_singleplayer.cpp  scene_singleplayer_update.cpp  scene_versus.cpp  screen_customize.cpp  screen_customize.h  screen_main_menu.cpp  screen_main_menu.h  screen_secondary.cpp  screen_secondary.h  screen_settings.cpp  (+11 more)
src/resources/shaders/: daynight.fs  daynight.vs
tools/: build_pak.cpp
